--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/vue"></script>
 </head>
 <body>
   <div id="app">
-      <h1>{{product}}</h1>
-  </div>
+     <div class="product">
+         <div class="product-image">
+             <img :src="image" :alt="altText"/>
+         </div>
+            <div class="product-info">
+             <h1>{{product}}</h1>
+             <p>{{description}}</p>
+             <a :href="link" target="_blank">View More</a>
+             </div>            
+        </div>
+    </div>
   <script src="main.js"></script>
   
   
