--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
             <div class="product-info">
              <h1>{{product}}</h1>
              <p>{{description}}</p>
+             <p v-if="onSale">Item On Sale!!!! Grab Fast!!!</p>
+             <p v-else>Regular Sale</p>
+             <p v-if="inStock">In Stock</p>
+             <p v-else>Out of Stock</p>
              <a :href="link" target="_blank">View More</a>
+             <ul>
+                 <li v-for="detail in details">{{detail}}</li>
+             </ul>
+             <label for="">Size</label>             <select >
+                 <option v-for="size in sizes">
+                        {{size}}
+                 </option>
+             </select>
+                 
+             <div v-for="variant in variants" :key="variant.variantID">
+                 <p>
+                     {{variant.variantColor}}
+                 </p>
+
+             </div>
              </div>            
         </div>
     </div>
