--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <script src="https://unpkg.com/vue"></script>
 </head>
 <body>
+        <div class="nav-bar"></div>
   <div id="app">
      <div class="product">
          <div class="product-image">
              <img :src="image" :alt="altText"/>
          </div>
             <div class="product-info">
-             <h1>{{product}}</h1>
+             <h1>{{title}}</h1>
              <p>{{description}}</p>
              <p v-if="onSale">Item On Sale!!!! Grab Fast!!!</p>
              <p v-else>Regular Sale</p>
              <p v-if="inStock">In Stock</p>
-             <p v-else>Out of Stock</p>
+             <p v-else :class ="{outOfStock : !inStock}">Out of Stock</p>
              <a :href="link" target="_blank">View More</a>
              <ul>
                  <li v-for="detail in details">{{detail}}</li>
@@ -31,12 +32,20 @@
                  </option>
              </select>
                  
-             <div v-for="variant in variants" :key="variant.variantID">
-                 <p>
-                     {{variant.variantColor}}
-                 </p>
-
+             <div class="color-box"
+             v-for="(variant, index) in variants" 
+             :key="variant.variantId"
+             :style="{ backgroundColor: variant.variantColor }"
+             @mouseover="updateProduct(index)"
+             >
+        </div> 
+             <div class="cart">
+                 <p>Cart({{cart}})</p>
              </div>
+             <button v-on:click="addToCart"
+             :disabled="!inStock"
+             :class="{disabledButton:!inStock}">Add to Cart</button>
+             <button @click="RemoveCart">Remove From Cart</button>
              </div>            
         </div>
     </div>
