--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
 <body>
         <div class="nav-bar"></div>
   <div id="app">
-      <product></product>
-      <product></product>
-      <product></product>
-
+      <product :premium="premium"></product>
   </div>
-  <script src="main.js"></script>
-  
-  
+  <script src="main.js"></script>  
 </body>
 </html>
